--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
             android:gravity="center"
             android:orientation="vertical"
             tools:context=".MainActivity">
@@ -24,35 +25,28 @@
                 android:text="SignIn" />
 
             <Button
-                android:id="@+id/btnSocket"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Socket Action" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tvState"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:textSize="18sp" />
-
-            <Button
                 android:id="@+id/btnSignOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:text="Sign out" />
 
             <Button
                 android:id="@+id/btnGenerate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="Generate Url"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btnSignOut" />
+                android:text="Generate Url" />
+
+            <Button
+                android:id="@+id/btnGetCloud"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get Cloud" />
+
+            <Button
+                android:id="@+id/btnGetCloudCall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Get Cloud Call" />
         </LinearLayout>
 
 
