- useLocal, in memory object caching

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,12 @@
                 android:text="SignIn" />
 
             <Button
+                android:id="@+id/signInAnonymously"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="signInAnonymously" />
+
+            <Button
                 android:id="@+id/btnSignOut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,10 +43,10 @@
                 android:text="Generate Url" />
 
             <Button
-                android:id="@+id/btnGetCloud"
+                android:id="@+id/btnGetCloudCreate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Get Cloud" />
+                android:text="Create Cloud" />
 
             <Button
                 android:id="@+id/btnGetCloudCall"
